--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
           <h1 class="section__title section__title--intro">
               Bank Of America Hackathon <strong>Double AI</strong>
           </h1>
-          <p class="section__subtitle section__subtitle--intro">Khuziama Rehman | Marina Orzechowski | Krushang Shah | Team Member</p>
+          <p class="section__subtitle section__subtitle--intro">Khuziama Rehman | Marina Orzechowski | Krushang Shah</p>
           <img src="https://media.gettyimages.com/photos/sign-is-posted-in-front-of-a-bank-of-america-office-on-july-16-2018-picture-id1000310704?k=6&m=1000310704&s=612x612&w=0&h=OMts3IOAP5-Z4DIbm5mj3Rkx5NjIQ1br6sTnT7GfLVA=" alt="" class="intro__img">
       </section>
 
@@ -44,7 +44,6 @@
                 <p>Khuziama Rehman</p>
                 <p>Marina Orzechowski</p>
                 <p>Krushang Shah</p>
-                <p>Team Member</p>
             </div>
               <div class="service">
                 <h3>Motivation: Why Analyze Online Reviews?</h3>
@@ -77,7 +76,7 @@
           <p class="section__subtitle section__subtitle--about">WE CAN PUT THE GRAPH BELOW THIS, OR MAKE A BUTTON TO A PAGE SIMILAR TO THIS AND HAVE THE GRAPHS/ DATA VISUALIZATION</p>
 
           <div class="about-me__body">
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit, ratione laboriosam reiciendis ab at in voluptatem optio alias dolorem velit temporibus provident molestiae obcaecati nam, aut sequi cupiditate similique doloremque!</p>
+              <p>We can add description on how to use tool or what the tool can be used for etc</p>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis obcaecati quasi numquam sint, eos animi, porro quod laudantium vitae ad corrupti unde consectetur blanditiis itaque molestias quisquam consequatur dicta id?</p>
               <a href="#work" class="btn">Start Application</a>   
           </div>
@@ -88,16 +87,16 @@
    
       <footer class="footer" id="contact">
 
-          <!-- <a href="mailto:rehmankhuziama@gmail.com" class="footer__link">rehmankhuziama@gmail.com</a> -->
+         
           <ul class="social-list">
             <li class="social-list__item">
-                <a class="social-list__link" target="_blank" href="https://www.linkedin.com/in/khuziama-rehman-014039186/"><i class="fab fa-linkedin"></i> Marina</a>
+                <a class="social-list__link" target="_blank" href="https://www.linkedin.com/in/marina-skachko-orzechowski/"><i class="fab fa-linkedin"></i> Marina</a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" target="_blank" href="https://www.linkedin.com/in/khuziama-rehman-014039186/"><i class="fab fa-linkedin"></i> Krushang</a>
+                <a class="social-list__link" target="_blank" href="https://www.linkedin.com/in/krushang/"><i class="fab fa-linkedin"></i> Krushang</a>
             </li>
             <li class="social-list__item">
-                <a class="social-list__link" target="_blank" href="https://www.linkedin.com/in/khuziama-rehman-014039186/"><i class="fab fa-linkedin"></i> Khuziama</a>
+                <a class="social-list__link" target="_blank" href="https://www.linkedin.com/in/khuziamarehman/"><i class="fab fa-linkedin"></i> Khuziama</a>
             </li>
             <!-- <li class="social-list__item">
                 <a class="social-list__link" target="_blank" href="https://github.com/KhuziamaR"><i class="fab fa-github"></i></a>
